2002-10-16 garlick
	* Make Action struct private to device.c
	* Move script names to config.h.
	* Merged _match_regex into _match_subexpression.  Removed intermediate
	  regex match data from Interpretation struct (now temporary in 
	  _match_subexpression).
	* Fixed bug where query for N-1 plugs on an N-plug device resulted
	  in N-1 separate queries, each acquiring state for the whole device.
	* Fixed bug where read returned EOF occasionally.  This was a read
	  attempt on a zero length buffer.  It turns out the read buffer was
	  huge and never was compacted.  Reduced buffer size from 64K to 8K.
	* Tagged powerman-1-0-11.

 2002-10-14 garlick
	* Remove RESET_SCRIPT definitions in wti and baytech device files.
	* Got rid of Cluster and Node data structures.
	* Plug state is no longer global - seperate copy for each client cmd.
	* Fixed memory leaks in _create_client/_destroy_client.
	* Trimmed TODO file.
	* Fixed bug where actions could not make progress torward timeout
	  while device is in unconnected state.

2002-10-11 garlick
	* Fix bug in vpcd where empty line would look like EOF on socket.

2002-10-08 garlick
	* Fixed bug where Action "found" client by client struct address, but
	  if client had died, address could still be valid.  Now we use a 
	  unique integer identifier to find client.
	* Made device read/write error handling a little cleaner.
	* Don't set plug state to unknown before querying status to avoid
	  triggering race described in FIXME comment in client.c _parse_input()
	* Tagged powerman-1-0-10.

2002-10-06 garlick
	* More man page edits.

2002-10-06 garlick
	* Updated hostlist.[ch] to latest from the pdsh sources.
	* Tagged powerman-1-0-9.

2002-10-06 garlick
	* _process_send can now time out.
	* Clean up device.c select handling a bit to make it clear why actions
	  will not time out if device is not connected. 
	* _handle_write now handles errors from buf_write.
	* Client now returns error on unimplemented commands.